# pr-genius

./: .gitignore  AGENT_GUIDELINES_SCHEMA.md  BLACKLIST.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DISCUSSIONS.md  Dockerfile  KNOWN_ISSUES.md  LICENSE  README.md  README.zh.md  ROUNDS_SCHEMA.md  SECURITY.md  glama.json  index.md  validate.py
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
HolmesGPT-holmesgpt/: index.md
Ikalus1988-MisakaNet/: index.md  pr-439-pep668-lesson.md  pr-440-frontmatter-tests.md  pr-441-smart-fallback.md  pr-452-frontmatter-batch.md  pr-474-fanuc-lessons.md
KnugiHK-WhatsApp-Chat-Exporter/: index.md
NousResearch-hermes-agent/: index.md  pr-52917-comp-desktop-platform-windows.md
PharMolix-OpenBioMed/: index.md
actions-checkout/: index.md  pr-2518-auto.md
ag2ai-ag2/: RISK.md
agentic-community-mcp-gateway-registry/: index.md  pr-1382-auth-md-mermaid-token.md  pr-1383-egress-vault-mermaid-placeholders.md
anti-patterns/: README.md  actions-checkout-2509.json  actions-checkout-2517.json  actions-checkout-2520.json  ai-generated-content.md  anthropics-anthropic-sdk-python-1757.json  anthropics-anthropic-sdk-python-1773.json  astral-sh-ruff-27020.json  astral-sh-ruff-27074.json  astral-sh-ruff-27086.json  astral-sh-ruff-27139.json  astral-sh-uv-20487.json  awesome-mcp-servers-glama-badge-required.md  breaking-change-no-compat.md  chroma-core-chroma-7434.json  chroma-core-chroma-7456.json  chroma-core-chroma-7477.json  chroma-core-chroma-7483.json  chroma-core-chroma-7486.json  cli-cli-13905.json  contribai-archived-repo.md  contribai-auto-generated-trash.md  contribai-breaking-change-no-migration.md  contribai-design-philosophy-mismatch.md  contribai-docs-pr-missing-quickstart.md  contribai-duplicate-pr.md  contribai-ethical-review-failed.md  contribai-first-time-large-repo.md  contribai-incomplete-readme-contributing.md  contribai-missing-tests.md  contribai-needs-rfc-first.md  contribai-not-a-real-bug.md  contribai-out-of-scope.md  contribai-performance-benchmark-missing.md  contribai-site-tos-violation.md  cosmetic-no-user-pain.md  denoland-deno-36164.json  docker-compose-13930.json  docker-compose-13932.json  duplicate-pr-same-author.md  (+159 more)
astral-sh-ty/: index.md  pr-999993-breaking-change-demo.md  pr-NEEDS-RFC-demo.md
astral-sh-uv/: index.md  pr-19685-sarif-audit.md
chroma-core-chroma/: index.md
cli-cli/: index.md
danny-avila-LibreChat/: index.md
data/: anti_overfit_report.json  tool_call_ab_test.json
docs/: BLOG.md  (+13 more)
prgenius/: README.md  pyproject.toml
prgenius/src/prgenius/: __init__.py  __main__.py  cli.py  evaluator.py  mcp.py  parser.py  triage.py  utils.py
prgenius/tests/: test_mcp.py  test_mcp_stdio.py  test_parser_smoke.py  test_triage.py
(+663 files in other folders)
